新增：按母体计费核心完善内嵌集成包